# aiodoo-validation

./: .editorconfig  .gitignore  AUDIT_RESOLUTION.md  CHANGELOG.md  CONTRACT_ADOPTION.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  README.md  RELEASE_REPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
aiodoo_validation/: __init__.py  __main__.py  __version__.py  exceptions.py  execution.py  production.py
aiodoo_validation/api/: __init__.py  builders.py  compatibility.py  integrations.py  metadata.py  profiles.py  results.py  service.py
aiodoo_validation/behavior/: __init__.py  build_result.py  capability_pipeline.py  case_builder.py  exceptions.py
aiodoo_validation/benchmark/: __init__.py  base.py  engine.py  ids.py  policies.py  production.py  registry.py
aiodoo_validation/capabilities/: __init__.py  bootstrap.py  contract.py  registry.py
aiodoo_validation/certification/: __init__.py  base.py  behavioral.py  criteria.py  engine.py  ids.py  policies.py  production.py  registry.py  score_signals.py
aiodoo_validation/cli/: __init__.py  app.py  commands.py  config.py  exit_codes.py  formatter.py  parser.py
aiodoo_validation/comparators/: __init__.py  structural.py
aiodoo_validation/contract/: __init__.py  adapters.py  parser_bridge.py  prompt_bridge.py  version_check.py
aiodoo_validation/corpus/: __init__.py  catalog.py  exceptions.py  gates.py  governance.py  jsonl.py  loader.py  manifest.py  pinning.py  provider.py
aiodoo_validation/domain/: __init__.py  artifact_paths.py  artifacts.py  behavior.py  benchmark.py  capability_record.py  capability_spec.py  certification.py  comparator.py  context.py  corpus.py  enums.py  freeze.py  inference.py  oracle.py  profile.py  report.py  request.py  resolution.py  result.py  runtime_metrics.py  scoring.py  stage.py  v1_scope.py
aiodoo_validation/engine/: __init__.py  protocol.py  validation_engine.py
aiodoo_validation/inference/: __init__.py  compatibility.py  paths.py  runner.py  runtime_policy.py  stub_runner.py
aiodoo_validation/oracles/: __init__.py  base.py  behavioral.py  capability_behavior.py  engine.py  ids.py  placeholders.py  registry.py  structural.py
aiodoo_validation/ports/: __init__.py  artifact_resolver.py  benchmark_engine.py  certification_engine.py  inference_runner.py  oracle_runner.py  profile_engine.py  report_generator.py  scoring_engine.py
docs/: MAINTENANCE.md  SPECIFICATION_V1.md  approval_profile.md  architecture.md  architecture_audit.md  artifact_bundle.md  behavioral_validation.md  benchmark_engine.md  capability_specification.md  capability_validation_contract.md  certification_engine.md  cli.md  coding_profile.md  conversation_profile.md  delivery_governance.md  engineering_execution_plan.md  evaluation_profile.md  execution_profile.md  extensibility_refinements.md  implementation_status.md  inference_runner.md  integration.md  oracle_framework.md  planner_profile.md  repair_profile.md  report_generation.md  scoring_engine.md
requirements/: base.txt  dev.txt  inference.txt
scripts/: aiodoo-validation
(+228 files in other folders)
