# Tooling configuration only.
# Run from the repository root with: python3 -m aiodoo_validation
# Or use the console script: scripts/aiodoo-validation

[project]
name = "aiodoo-validation"
version = "0.0.0-dev"
requires-python = ">=3.12"

[project.scripts]
aiodoo-validation = "aiodoo_validation.cli.app:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["aiodoo_validation"]

[tool.coverage.run]
branch = true
source = ["aiodoo_validation"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
