# Tooling configuration only.
# Prefer: PYTHONPATH=. python3 -m aiodoo_validation
# Or: ./scripts/aiodoo-validation
# Not published to PyPI (no build-system table). project.scripts is metadata only.

[project]
name = "aiodoo-validation"
version = "2.0.0"
description = "Canonical Evaluation & Certification Framework for AIODOO Models"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["aiodoo", "validation", "evaluation", "certification", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.scripts]
aiodoo-validation = "aiodoo_validation.cli.app:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["aiodoo_validation"]

[tool.coverage.run]
branch = true
source = ["aiodoo_validation"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
